# league_agents

./: .env.example  .gitignore  README.md  TODO.md  lck_matches.py  prediction_report.md  pyproject.toml  report.md
league_agents/: crew.py  dl_videos.py  get_transcript.py  livechat.py  main.py  process_youtube_transcripts.py
league_agents/config/: agents_league.yaml  agents_tasks.yaml
league_agents/data/: lpl_summaries.md  lpl_summaries.old  lpl_teams_2025.md  patch_notes.md  prompts.md  teams.md  teams_2025.md
league_agents/data/games/: predictions.md  teams_2025.md  test_code_outlier.py
league_agents/data/games/lckcup/: summarizes_results.md
league_agents/data/games/lckcup/prompts/: t1vsdk.md
league_agents/data/games/lckcup/transcripts/: bfx_vs_drx_and_t1_vs_kt.md  bfx_vs_ns.md  bfxvskt_t1vsdk.md  bro_vs_geng_hle_vs_ns.md  brovsns.md  hle_vs_geng_and_bro_ns.md  (+4 more)
league_agents/data/games/week1/: analyze_llm.md  hle_vs_geng.md  ns_vs_bro.md  summarizes_results.md
league_agents/data/transcripts/: dnf_vs_ns.md
league_agents/data/week1/: analyze_llm.md  bfxvskt.md  bro_vs_ns_and_dnf_vs_ns.md
league_agents/tools/: csv_data_tool.py  data_downloader.py  dl_data.py  reddit_data_tool.py
results/: prediction_report.md  prediction_report_drx.md
results/2025/: prediction_report_more.md
results/2025/lck_1/: prediction_report_dnf_vs_ns.md  prediction_report_drx_vs_bro.md  prediction_report_fearx_vs_kt.md  prediction_report_t1_vs_dplus.md  week_1_thoughts.md
src/league_agents/: crew.py  main.py
src/league_agents/config/: agents_league.yaml  agents_tasks.yml
