[project]
name = "league_agents"
version = "0.1.0"
description = "league_agents using crewAI"
authors = [{ name = "David Li", email = "davidli012345@gmail.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0",
    "gdown>=5.2.0",
    "google-generativeai>=0.8.4",
]

[project.scripts]
league_agents = "league_agents.main:run"
run_crew = "league_agents.main:run"
train = "league_agents.main:train"
replay = "league_agents.main:replay"
test = "league_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
